--- a/projects/ngx3js/src/lib/renderer/renderer.component.scss
+++ b/projects/ngx3js/src/lib/renderer/renderer.component.scss
@@ -22,6 +22,11 @@
 		top: 0;
 		height: 0;
 		z-index: 10;
+		::ng-deep {
+			.lil-gui {
+				display: block;
+			}
+		}
 	}
 	.canvas {
 		display: inline-block;
