--- a/projects/ngx3js/src/lib/renderer/renderer.component.scss
+++ b/projects/ngx3js/src/lib/renderer/renderer.component.scss
@@ -25,6 +25,10 @@
 		::ng-deep {
 			.lil-gui {
 				display: block;
+				&.root>.children {
+					max-height: 80vh;
+					overflow: auto;
+				}
 			}
 		}
 	}
