--- a/projects/ngx3js/src/lib/renderer/renderer.component.scss
+++ b/projects/ngx3js/src/lib/renderer/renderer.component.scss
@@ -14,7 +14,6 @@
 		display: none;
 	}
 	.debug {
-		pointer-events: all;
 		display: block;
 		position: absolute;
 		left: 0;
@@ -22,9 +21,13 @@
 		top: 0;
 		height: 0;
 		z-index: 10;
+		.debug-stats {
+			pointer-events: all;
+		}
 		::ng-deep {
 			.lil-gui {
 				display: block;
+				pointer-events: all;
 				&.root>.children {
 					max-height: 80vh;
 					overflow: auto;
